# ars

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.github/: dependabot.yaml
.github/workflows/: ci.yaml  ci.yml  release.yaml  release.yml
benchmarks/: comparison_benchmarks.rs
examples/: basic.rs  url_search_params.rs
src/: character_sets.rs  checkers.rs  compat.rs  error.rs  helpers.rs  idna.rs  ipv4.rs  ipv6.rs  lib.rs  scheme.rs  types.rs  url_aggregator.rs  url_base.rs  url_components.rs  url_search_params.rs
src/idna/: implementation.rs  norm_tables.rs  tables.rs
src/parser/: mod.rs  parse_aggregator.rs  state.rs
src/unicode/: idna.rs  mod.rs  percent_encode.rs
tests/: advanced_parsing_tests.rs  basic_tests.rs  setter_tests.rs  url_search_params_tests.rs  wpt.rs
tests/wpt/: urltestdata.json  wpt_canparse_tests.rs  wpt_full_tests.rs  wpt_loader.rs  wpt_runner.rs
